cmake_minimum_required(VERSION 3.0)

project(task_A)

project(task_B)

project(task_C)

project(task_D)

project(task_E)

project(task_F)

add_executable(task_A taskA/main.cpp)

add_executable(task_B taskB/main.cpp)

add_executable(task_C taskC/main.cpp)

add_executable(task_D taskD/main.cpp)

add_executable(task_E taskE/main.cpp)

add_executable(task_F taskF/main.cpp)
